# backend/app/controllers/api/userwords_controller.rb
@@ -1,10 +1,19 @@
 class Api::UserwordsController < ApplicationController
     skip_before_action :verify_authenticity_token
     def show
-        userwords=UserWord.where(userid:params[:id])
-        render json: userwords
+        userwords = UserWord.select(:id,:word_number,:count).where(userid: params[:id])
+
+        userword_objects = userwords.map do |userword|
+        word = Word.select(:word).find_by(id: userword.id).word
+        # Create a new object with the original userword attributes and the additional word attribute
+        {
+            userword: userword,
+            word: word
+        }
+          end
+        render json: userword_objects
     end
-    
+
     def create
         wordId = UserWord.find_by(word_number: params["word_number"])
         if word
